--- a/src/site/templates/articles/articles__detail.htm
+++ b/src/site/templates/articles/articles__detail.htm
@@ -29,7 +29,7 @@
                                 {{DESCRIPTION}}
                             </div>
                         </article>
-                        <div class="article__socials">
+                        <div class="article__socials" data-animation>
                             <a href="https://t.me/share/url?url={{SHAREURL}}&text={{SHAREDESCRIPTION}}" target="_blank" class="article__social icon-telegram"></a>
                             <a href="https://vk.com/share.php?url={{SHAREURL}}&title={{SHARETITLE}}&image={{SHAREIMAGE}}" target="_blank" class="article__social icon-vk"></a>
                             <a href="https://www.odnoklassniki.ru/dk?st.cmd=addShare&st.s=1&st._surl={{SHAREURL}}&st.comments={{SHAREDESCRIPTION}}" target="_blank" class="article__social icon-ok"></a>
