--- a/src/site/templates/company/company.htm
+++ b/src/site/templates/company/company.htm
@@ -12,7 +12,7 @@
             <section class="page__about about">
                 <div class="about__container">
                     <div class="about__image">
-                        <picture><source srcset="/img/about.webp" type="image/webp"><img src="/img/about.jpg" class="cover-image" alt="ПСК СтройИ нвест"></picture>
+                        <picture><source srcset="/img/about.webp" type="image/webp"><img src="/img/about.jpg" class="cover-image" alt="ПСК СтройИнвест"></picture>
                     </div>
                     <div class="about__body">
                         <div class="about__text article__content">
@@ -22,7 +22,7 @@
                         </div>
                         {{ADVANTAGES}}
 
-                        <!--{{BLOCKMISSION}}-->
+                        {{BLOCKMISSION}}
                         {{BLOCKSTANDARTS}}
                         {{BLOCKGUARANTEES}}
 
@@ -33,10 +33,10 @@
             <section class="page__equipment equipment">
                 <div class="equipment__container">
                     <div class="equipment__body">
-                        <h2 class="equipment__title title-lg">
+                        <h2 class="equipment__title title-lg" data-animation>
                             {{BLOCKPRODUCTIONHEADING}}
                         </h2>
-                        <div class="equipment__subtitle">
+                        <div class="equipment__subtitle" data-animation>
                             {{BLOCKPRODUCTIONANNO}}
                         </div>
                         <div class="equipment__items">
