--- a/src/site/templates/company/partial/company__client__item.htm
+++ b/src/site/templates/company/partial/company__client__item.htm
@@ -1,12 +1,16 @@
-<li>
-                        <div class="logo"><img src="{{IMAGE}}" alt="{{ALT}}" title="{{ALT}}" {{STYLE}}></div>
-                        <div class="info">
-                            <h2>{{TITLE}}</h2>
-                            <div class="text">
+<div class="company">
+                            <div class="company__header">
+                                <h2 class="company__title title-md">
+                                    {{TITLE}}
+                                </h2>
+                                <div class="company__logo">
+                                    <picture><source srcset="{{IMAGEWEBP}}" type="image/webp"><img src="{{IMAGE}}" alt="{{ALT}}"></picture>
+                                </div>
+                            </div>
+                            <div class="company__desc">
                                 {{DESCRIPTION}}
                             </div>
                             {{LINK}}
                         </div>
-                        <div class="clear-l"></div>
-                    </li>
+                        
                     
