--- a/src/site/templates/components/articles/bl-news-similar.htm
+++ b/src/site/templates/components/articles/bl-news-similar.htm
@@ -1,6 +1,6 @@
 <section class="page__news news">
                 <div class="news__container">
-                    <div class="news__header">
+                    <div class="news__header" data-animation>
                         <h2 class="news__title title-xxl">
                             {{TITLE}}
                         </h2>
