--- a/src/site/templates/components/navigation/sub-navigation.htm
+++ b/src/site/templates/components/navigation/sub-navigation.htm
@@ -1,3 +1,5 @@
-<ul style="display: none;">
-  {{CONTENT}}
-</ul>
+<div class="submenu">
+                        <ul class="submenu__list">
+                            {{CONTENT}}
+                        </ul>
+                    </div>
