--- a/src/site/templates/components/navigation/sub-navigation__elem.htm
+++ b/src/site/templates/components/navigation/sub-navigation__elem.htm
@@ -1,1 +1,6 @@
-<li{{CLASS}}><a href="{{LINK}}">{{TITLE}}</a></li>
+<li class="submenu__item{{CLASS}}">
+                                <a href="{{LINK}}" class="submenu__link">
+                                    {{TITLE}}
+                                </a>
+                            </li>
+                            
