--- a/src/site/templates/components/pagination/c-pagination.htm
+++ b/src/site/templates/components/pagination/c-pagination.htm
@@ -1,9 +1,9 @@
 <ul class="{{CLASS}} pagination">
 									<li class="pagination__item pagination__item-left">
-										<a href="{{PREVIOUS:LINK}}" class="pagination__link icon-arrow {{PREVIOUS:STATUS}}"></a>
+										<a href="{{PREVIOUS:LINK}}" class="pagination__link icon-arrow" {{PREVIOUS:STATUS}}></a>
 									</li>
 									{{LIST}}
 									<li class="pagination__item pagination__item-right">
-										<a href="{{NEXT:LINK}}" class="pagination__link icon-arrow {{NEXT:STATUS}}"></a>
+										<a href="{{NEXT:LINK}}" class="pagination__link icon-arrow" {{NEXT:STATUS}}></a>
 									</li>
 								</ul>
