--- a/src/site/templates/contacts/bl-feedback.htm
+++ b/src/site/templates/contacts/bl-feedback.htm
@@ -1,4 +1,4 @@
-<section class="page__feedback feedback">
+<section class="page__feedback feedback" data-animation>
                 <div class="feedback__container">
                     <div class="feedback__content">
                         <form action="/form/add-question/" class="feedback__form form" method="post">
