--- a/src/site/templates/layout/footer.htm
+++ b/src/site/templates/layout/footer.htm
@@ -22,26 +22,7 @@
                 <li class="footer-body__list-item footer-body__list-caption">
                     Комплексные предложения
                 </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        СИП-арматура собственного производства
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Комплектация щитового оборудования
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Комплексные поставки гражданского строительства
-                    </a>
-                </li>
-                <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
-                        Комплексные поставки для промышленности
-                    </a>
-                </li>
+                {{DIRECTIONSNAV}}
             </ul>
             <ul class="footer-body__list footer-body__list-lg">
                 <li class="footer-body__list-item footer-body__list-caption">
