--- a/src/site/templates/production/bl-other.htm
+++ b/src/site/templates/production/bl-other.htm
@@ -1,11 +1,10 @@
-<div class="section no-margin">
-            <div id="bl-production">
-                <div class="holder">
-                    <h2>{{TITLE}}</h2>
-
-                    <ul>
+<section class="page__more-products more-products">
+                <div class="more-products__container">
+                    <h2 class="more-products__title title-xl">
+                        {{TITLE}}
+                    </h2>
+                    <div class="more-products__grid">
                         {{LIST}}
-                    </ul>
+                    </div>
                 </div>
-            </div>
-        </div>
+            </section>
