--- a/src/site/templates/production/partial/bl-other__item.htm
+++ b/src/site/templates/production/partial/bl-other__item.htm
@@ -1,2 +1,17 @@
-<li><a href="{{LINK}}">{{TITLE}}</a></li>
+<div class="more-products__grid-item product">
+                            <a href="{{LINK}}" class="product__image">
+                                <picture><source srcset="{{IMAGEWEBP}}" type="image/webp"><img src="{{IMAGE}}" alt="{{ALT}}"></picture>
+                            </a>
+                            <div class="product__desc">
+                                <a href="{{LINK}}" class="product__title">
+                                    {{TITLE}}
+                                </a>
+                                <div class="product__text">
+                                    {{TEXTGOST}}
+                                </div>
+                                <a href="{{LINK}}" class="product__link more-link">
+                                    Подробнее
+                                </a>
+                            </div>
+                        </div>
                         
