--- a/src/site/templates/production/production_direction.htm
+++ b/src/site/templates/production/production_direction.htm
@@ -16,7 +16,7 @@
                 <div class="products__container">
                     <div class="products__wrapper">
                         <div class="products__menu products-menu">
-                            {{INCLUDE:SUBCATEGORIES}}
+                            {{INCLUDE:CATEGORIES}}
                         </div>
                         <div class="products__body">
                             <form action="#" class="products__search search">
@@ -61,6 +61,14 @@
                             -->
                                 {{INCLUDE:PAGINATION}}
                             </div>
+                        </div>
+                    </div>
+                    <div class="products__offers">
+                        <h2 class="products__offers-title title-xxl">
+                            Другие предложения
+                        </h2>
+                        <div class="products__offers-items">
+                            {{INCLUDE:DIRECTION_OTHERS}}
                         </div>
                     </div>
                 </div>
