--- a/src/site/templates/projects/project_equipment.htm
+++ b/src/site/templates/projects/project_equipment.htm
@@ -1,4 +1,4 @@
-<!-- <section class="page__more-products more-products">
+<!-- <section class="page__more-products more-products" data-animation>
                 <div class="more-products__container">
                     <h2 class="more-products__title title-md">
                         {{TITLE}}
