--- a/src/site/templates/static/static.htm
+++ b/src/site/templates/static/static.htm
@@ -9,13 +9,13 @@
         </div>
         <canvas id="gradient-canvas" data-transition-in>
       </section>
-      <div class="page__article article">
-        <div class="article__container">
-          <div class="article__body">
-            <article class="article__content">
+      <section class="page__about about">
+        <div class="about__container">
+          <div class="about__body">
+            <div class="about__privacy article__content">
               {{CONTENT}}
-            </article>
+            </div>
+
           </div>
         </div>
-      </div>
-      
+      </section>
