--- a/src/site/templates/stores/_stores-attributes-row.htm
+++ b/src/site/templates/stores/_stores-attributes-row.htm
@@ -1,5 +1,9 @@
-<li>
-                                        <div class="value">{{VALUE}}</div>
-                                        <div class="label">{{TITLE}}</div>
-                                    </li>
-                                    
+<li class="complex__spectification-item">
+                                                <div class="complex__spectification-title">
+                                                    {{TITLE}}
+                                                </div>
+                                                <div class="complex__spectification-value">
+                                                    {{VALUE}}
+                                                </div>
+                                            </li>
+                                            
