--- a/src/site/templates/stores/_stores-navigation-row.htm
+++ b/src/site/templates/stores/_stores-navigation-row.htm
@@ -1,2 +1,5 @@
-<li{{NAVCLASS}}><a href="#store{{ID}}" class="js-anchor">{{TITLESHORT}}</a></li>
+<button class="tabs__button{{NAVCLASS}}" data-tab-button>
+                                        {{TITLESHORT}}
+                                    </button>
+                                    
                         
