--- a/src/site/templates/video/bl-video-main.htm
+++ b/src/site/templates/video/bl-video-main.htm
@@ -1,4 +1,4 @@
-<section class="page__video video">
+<section class="page__video video" data-animation>
                     <div class="video__container">
                         <div class="video__body">
                             <div class="video__main">
