--- a/src/site/templates/video/bl-video.htm
+++ b/src/site/templates/video/bl-video.htm
@@ -1,4 +1,4 @@
-<div class="about__video video__body">
+<div class="about__video video__body" data-animation>
                             <div class="video__main">
                                 <h2 class="video__title title-xl">
                                     Видео о нас
