--- a/layout/news.html
+++ b/layout/news.html
@@ -40,9 +40,9 @@
 	<meta property="twitter:image:src" content="preview image">
 	<!-- Twitter -->
 
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221210135108">
-	<link rel="stylesheet" href="css/reset.min.css?_v=20221210135108">
-	<link rel="stylesheet" href="css/style.min.css?_v=20221210135108">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css?_v=20221211133055">
+	<link rel="stylesheet" href="css/reset.min.css?_v=20221211133055">
+	<link rel="stylesheet" href="css/style.min.css?_v=20221211133055">
 
 
 </head>
@@ -82,37 +82,54 @@
         <div class="menu__container">
             <ul class="menu__list">
                 <li class="menu__item"><a href="/" class="menu__link ">ГЛАВНАЯ</a></li>
-                <li class="menu__item">
-                    <a href="/about.html" class="menu__link ">О КОМПАНИИ</a>
+                <li class="menu__item menu-parent">
+                    <a href="/about.html" class="menu__link icon-arrow ">О КОМПАНИИ</a>
                     <div class="submenu">
                         <ul class="submenu__list">
                             <li class="submenu__item">
-                                <a href="#" class="submenu__link nav-item ">
-                                    Digital Trends
+                                <a href="/about.html" class="submenu__link">
+                                    Основная информация
                                 </a>
                             </li>
                             <li class="submenu__item">
-                                <a href="/marketing.html" class="submenu__link nav-item">
-                                    Digital Marketing Communication
+                                <a href="/sert.html" class="submenu__link">
+                                    Сертификаты
                                 </a>
                             </li>
                             <li class="submenu__item">
-                                <a href="/web.html" class="submenu__link nav-item">
-                                    Web Design & Web Development
+                                <a href="/partners.html" class="submenu__link">
+                                    Партнеры
                                 </a>
                             </li>
                             <li class="submenu__item">
-                                <a href="#"  class="submenu__link nav-item">
-                                    GDPR – General Data Protection Regulation
+                                <a href="/team.html" class="submenu__link">
+                                    Руководство
+                                </a>
+                            </li>
+                            <li class="submenu__item">
+                                <a href="/customers.html" class="submenu__link">
+                                    Заказчики
+                                </a>
+                            </li>
+                            <li class="submenu__item">
+                                <a href="/complex.html" class="submenu__link">
+                                    Логистический комплекс
+                                </a>
+                            </li>
+                            <li class="submenu__item">
+                                <a href="/reviews.html" class="submenu__link">
+                                    Отзывы
                                 </a>
                             </li>
                         </ul>
                     </div>
                 </li>
-                <li class="menu__item"><a href="/products.html" class="menu__link ">ПРОДУКЦИЯ И УСЛУГИ</a></li>
-                <li class="menu__item"><a href="/projects.html" class="menu__link ">ПРОЕКТЫ</a></li>
+                <li class="menu__item"><a href="/products.html" class="menu__link ">ПРОДУКЦИЯ</a></li>
+                <li class="menu__item"><a href="/projects.html" class="menu__link ">ПРОЕКТЫ</a>
+                </li>
                 <li class="menu__item"><a href="/news.html" class="menu__link active">НОВОСТИ</a></li>
-                <li class="menu__item"><a href="/contacts.html" class="menu__link ">КОНТАКТЫ</a></li>
+                <li class="menu__item"><a href="/contacts.html" class="menu__link ">КОНТАКТЫ</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -177,7 +194,7 @@
 								<picture><source srcset="img/news/01.webp"type="image/webp"><img src="img/news/01.jpg" class="cover-image" alt="news picture"></picture>
 							</a>
 						</div>
-						<div class="news__item">
+						<div class="news__item" data-animation>
 							<div class="news__item-body">
 								<h3 class="news__item-title title-md">
 									<a href="/article.html" class="news__item-link">
@@ -199,7 +216,7 @@
 								<picture><source srcset="img/news/02.webp"type="image/webp"><img src="img/news/02.jpg" class="cover-image" alt="news picture"></picture>
 							</a>
 						</div>
-						<div class="news__item">
+						<div class="news__item" data-animation>
 							<div class="news__item-body">
 								<h3 class="news__item-title title-md">
 									<a href="/article.html" class="news__item-link">
@@ -222,7 +239,7 @@
 								<picture><source srcset="img/news/03.webp"type="image/webp"><img src="img/news/03.jpg" class="cover-image" alt="news picture"></picture>
 							</a>
 						</div>
-						<div class="news__item">
+						<div class="news__item" data-animation>
 							<div class="news__item-body">
 								<h3 class="news__item-title title-md">
 									<a href="/article.html" class="news__item-link">
@@ -243,7 +260,7 @@
 								<picture><source srcset="img/news/04.webp"type="image/webp"><img src="img/news/04.jpg" class="cover-image" alt="news picture"></picture>
 							</a>
 						</div>
-						<div class="news__item">
+						<div class="news__item" data-animation>
 							<div class="news__item-body">
 								<h3 class="news__item-title title-md">
 									<a href="/article.html" class="news__item-link">
@@ -264,7 +281,7 @@
 								<picture><source srcset="img/news/05.webp"type="image/webp"><img src="img/news/05.jpg" class="cover-image" alt="news picture"></picture>
 							</a>
 						</div>
-						<div class="news__item">
+						<div class="news__item" data-animation>
 							<div class="news__item-body">
 								<h3 class="news__item-title title-md">
 									<a href="/article.html" class="news__item-link">
@@ -384,7 +401,7 @@
                     </a>
                 </li>
                 <li class="footer-body__list-item">
-                    <a href="" class="footer-body__list-link">
+                    <a href="/services.html" class="footer-body__list-link">
                         Комплексные поставки гражданского строительства
                     </a>
                 </li>
@@ -466,7 +483,7 @@
             <div class="footer-copy__text">
                 © 2022 ООО “ПСК СтройИнвест”
             </div>
-            <a href="" class="footer-copy__privacy">
+            <a href="/privacy.html" class="footer-copy__privacy">
                 Политика конфиденциальности
             </a>
             <div class="footer-copy__production">
@@ -481,12 +498,18 @@
     </div>
 </footer>
 	</div>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221210135108"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221210135108"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221210135108"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221210135108"></script>
-<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221210135108"></script>
-<script src="js/app.min.js?_v=20221210135108"></script>
+	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js?_v=20221211133055"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fslightbox/3.3.1/index.js?_v=20221211133055"></script>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js?_v=20221211133055"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js?_v=20221211133055"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js?_v=20221211133055"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollToPlugin.min.js?_v=20221211133055"></script>
+<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&_v=20221211133055"></script>
+<script src="https://www.youtube.com/iframe_api?v2.18&_v=20221211133055"></script>
+
+<script src="js/app.min.js?_v=20221211133055"></script>
 
 </body>
 
