--- a/src/site/templates/company/bl-advantages.htm
+++ b/src/site/templates/company/bl-advantages.htm
@@ -1,3 +1,3 @@
-<div class="about__numbers">
+<div class="about__numbers" data-animation>
                             {{LIST}}
                         </div>
