--- a/src/site/templates/company/company__licenses.htm
+++ b/src/site/templates/company/company__licenses.htm
@@ -1,13 +1,19 @@
-{{BREADCRUMBS}}
-
-<div class="holder">
-            <div id="licenses">
-                <h1>{{TITLE}}</h1>
-
-                {{TEXT}}
-
-                <ul>
+<section id="lottie" class="page__main main">
+                <div class="main__container">
+                    <div class="main__body main__body-md">
+                        {{BREADCRUMBS}}
+                        <h1 class="main__title title-xl">
+                            {{TITLE}}
+                        </h1>
+                        <div class="main__subtitle">
+                            {{TEXT}}
+                        </div>
+                    </div>
+                </div>
+                <canvas id="gradient-canvas" data-transition-in></canvas>
+            </section>
+            <div class="page__sert sert">
+                <div class="sert__container">
                     {{LIST}}
-                </ul>
+                </div>
             </div>
-        </div>
