--- a/src/site/templates/company/company__partners.htm
+++ b/src/site/templates/company/company__partners.htm
@@ -1,11 +1,23 @@
-{{BREADCRUMBS}}
-
-<div class="holder">
-            <div id="partners">
-                <h1>{{TITLE}}</h1>
-
-                <ul>
-                    {{LIST}}
-                </ul>
+<section id="lottie" class="page__main main">
+                <div class="main__container">
+                    <div class="main__body main__body-md">
+                        {{BREADCRUMBS}}
+                        <h1 class="main__title title-xl">
+                            {{TITLE}}
+                        </h1>
+                    </div>
+                </div>
+                <canvas id="gradient-canvas" data-transition-in></canvas>
+            </section>
+            <div class="page__companies companies companies-offset">
+                <div class="companies__container">
+                    <div class="companies__grid">
+                        {{LIST}}
+                    </div>
+                    <!-- <div class="companies__more-btn">
+                        <a href="" class="btn btn-blue btn-lg">
+                            Загрузить еще
+                        </a>
+                    </div> -->
+                </div>
             </div>
-        </div>
