--- a/src/site/templates/components/articles/bl-news__item.htm
+++ b/src/site/templates/components/articles/bl-news__item.htm
@@ -1,4 +1,4 @@
-<div class="news__item">
+<div class="news__item" data-animation>
                             <div class="news__item-body">
                                 <h3 class="news__item-title title-md">
                                     <a href="{{LINK}}" class="news__item-link">
