--- a/src/site/templates/production/partial/goody__card.htm
+++ b/src/site/templates/production/partial/goody__card.htm
@@ -1,8 +1,17 @@
-<li>
-                        <a href="{{LINK}}">
-                            <div class="photo"><img src="{{IMAGE}}" alt="{{ALT}}" title="{{ALT}}"></div>
-                            <div class="info">
-                                <h3>{{TITLE}}</h3>
-                            </div>
-                        </a>
-                    </li>
+<div class="products__grid-item product">
+                                        <a href="{{LINK}}" class="product__image">
+                                            <picture><source srcset="{{IMAGEWEBP}}" type="image/webp"><img src="{{IMAGE}}" alt="{{ALT}}"></picture>
+                                        </a>
+                                        <div class="product__desc">
+                                            <a href="{{LINK}}" class="product__title">
+                                                {{TITLE}}
+                                            </a>
+                                            <div class="product__text">
+                                                {{TEXTGOST}}
+                                            </div>
+                                            <a href="{{LINK}}" class="product__link more-link">
+                                                Подробнее
+                                            </a>
+                                        </div>
+                                    </div>
+                                    
