--- a/src/site/templates/stores/_stores-photos-row.htm
+++ b/src/site/templates/stores/_stores-photos-row.htm
@@ -1,1 +1,7 @@
-                                    <li><a href="{{IMAGEFULL}}" class="js-lightbox{{CLASS}}" data-gallery="store{{STOREID}}-photos" title="{{ALT}}"><img src="{{IMAGE}}" alt="{{ALT}}">{{MORETEXT}}</a></li>
+<a href="{{IMAGEFULL}}" data-fslightbox="gallert-{{STOREID}}" class="complex__gallery-item">
+                                                <picture><source srcset="{{IMAGEWEBP}}" type="image/webp"><img src="{{IMAGE}}" class="cover-image" alt="{{ALT}}"></picture>
+                                                <span class="complex__gallery-quantity">
+                                                    {{MORETEXT}}
+                                                </span>
+                                            </a>
+                                            
