--- a/src/site/templates/stores/_stores-vehicles-row.htm
+++ b/src/site/templates/stores/_stores-vehicles-row.htm
@@ -1,2 +1,2 @@
-<li>{{TITLE}}</li>
-                                    
+<li class="complex__list-item">{{TITLE}}</li>
+                                            
